Fix 'java import resolves templated class type into wrong java source'.

BUG:368484
FIXED-IN:2.10.2 (KDE Applications 16.08.2)